; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/gzip/extr_gzip.c_handle_dir.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/gzip/extr_gzip.c_handle_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@FTS_PHYSICAL = common dso_local global i32 0, align 4
@FTS_NOCHDIR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"couldn't fts_open %s\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @handle_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_dir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca [2 x i8*], align 16
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 0
  store i8* %6, i8** %7, align 16
  %8 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 1
  store i8* null, i8** %8, align 8
  %9 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 0
  %10 = load i32, i32* @FTS_PHYSICAL, align 4
  %11 = load i32, i32* @FTS_NOCHDIR, align 4
  %12 = or i32 %10, %11
  %13 = call i32* @fts_open(i8** %9, i32 %12, i32* null)
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %1
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 @warn(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %17)
  br label %46

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %42, %29, %28, %19
  %21 = load i32*, i32** %4, align 8
  %22 = call %struct.TYPE_3__* @fts_read(i32* %21)
  store %struct.TYPE_3__* %22, %struct.TYPE_3__** %5, align 8
  %23 = icmp ne %struct.TYPE_3__* %22, null
  br i1 %23, label %24, label %43

24:                                               ; preds = %20
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  switch i32 %27, label %42 [
    i32 133, label %28
    i32 131, label %28
    i32 132, label %29
    i32 130, label %29
    i32 128, label %29
    i32 129, label %34
  ]

28:                                               ; preds = %24, %24
  br label %20

29:                                               ; preds = %24, %24, %24
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @maybe_warn(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %32)
  br label %20

34:                                               ; preds = %24
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @handle_file(i32 %37, i32 %40)
  br label %42

42:                                               ; preds = %34, %24
  br label %20

43:                                               ; preds = %20
  %44 = load i32*, i32** %4, align 8
  %45 = call i32 @fts_close(i32* %44)
  br label %46

46:                                               ; preds = %43, %16
  ret void
}

declare dso_local i32* @fts_open(i8**, i32, i32*) #1

declare dso_local i32 @warn(i8*, i8*) #1

declare dso_local %struct.TYPE_3__* @fts_read(i32*) #1

declare dso_local i32 @maybe_warn(i8*, i32) #1

declare dso_local i32 @handle_file(i32, i32) #1

declare dso_local i32 @fts_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
